# bogoslav

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/bogoslav/: ai_communicator.py  calculate_file_hash.py  logger.py  main.py  main_typed.py  mainwrap.py  message.py  parsecli.py  parser.py  process_modification.py  unparser.py  user_error.py
tests/: test_main.py  test_parser.py  test_unparser.py
